--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <span>&bull;</span>
     <span>&bull;</span>
     <span>&bull;</span>
-    <iframe src="index2.html" width="25%" height="725px"></iframe>
+    <iframe src="http://127.0.0.1:5501/index2.html" width="25%" height="725px"></iframe>
     
     <h2 id="skills">Skills</h2>
     <button>HTML</button>
