--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2 id="skills">Skills</h2>
     <button>HTML</button>
     <button>CSS</button>
-    <button>Javascript</button>
+    <button>Python</button>
     <p>&bull; Fundamental Understanding of HTML,CSS and JavaScript</p>
     <p>&bull; Initial Proficiency in Adobe Illustrator</p>
     <p>&bull;Strong Analytical Skills</p>
