--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <button>HTML</button>
     <button>CSS</button>
     <button>Python</button>
-    <p>&bull; Fundamental Understanding of HTML,CSS and JavaScript</p>
+    <p>&bull; Fundamental Understanding of HTML,CSS and Python</p>
     <p>&bull; Initial Proficiency in Adobe Illustrator</p>
     <p>&bull;Strong Analytical Skills</p>
-    <p>&bull;Core Understanding of APIs</p>
-    <p>&bull; Entry-level expertise in SQL</p>
+    <p>&bull;Core Understanding of Github/VScode</p>
+    <p>&bull; Entry-level expertise in Javascript</p>
     <span>&bull;</span>
     <span>&bull;</span>
     <span>&bull;</span>
